[package]
name = "genrs"
description = "command-line tool and Library for generating random keys"
version = "0.1.1"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
authors = ["Arteii <ben.arteii@proton.me>"]
categories = ["command-line-interface"]
repository = "https://github.com/Arteiii/genrs"
homepage = "https://arteiii.github.io"


include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "lib/**/*",
    "bin/**/*",
]

[lib]
name = "genrs_lib"
path = "lib/lib.rs"

[[bin]]
name = "genrs"
path = "bin/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["wrap_help", "cargo"] }
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v1", "v3", "v4", "v5"] }